cmake_minimum_required(VERSION 3.27)
project(Class_work)

set(CMAKE_CXX_STANDARD 17)

add_executable(Class_work main.cpp
        Problem_6.cpp)
add_executable(Second_project Second_Project.cpp
        Problem_6.cpp)
add_executable(Third_Project Third_Project.cpp
        Problem_6.cpp)
add_executable(fourth_Project fourth_Project.cpp
        Problem_6.cpp)
add_executable(Problem_6 Problem_6.cpp)
